src/plan/snapshots/asupersync__plan__tests__plan_dag_empty.snap
---
source: src/plan/mod.rs
assertion_line: 1468
expression: dag
---
PlanDag {
    nodes: [],
    root: None,
}
