src/plan/snapshots/asupersync__plan__tests__plan_dag_join_of_two_leaves.snap
---
source: src/plan/mod.rs
assertion_line: 1486
expression: dag
---
PlanDag {
    nodes: [
        Leaf {
            label: "a",
        },
        Leaf {
            label: "b",
        },
        Join {
            children: [
                PlanId(
                    0,
                ),
                PlanId(
                    1,
                ),
            ],
        },
    ],
    root: Some(
        PlanId(
            2,
        ),
    ),
}
