src/plan/snapshots/asupersync__plan__tests__plan_dag_join_with_timeout_branch.snap
---
source: src/plan/mod.rs
expression: dag
---
PlanDag {
    nodes: [
        Leaf {
            label: "fast",
        },
        Leaf {
            label: "slow",
        },
        Timeout {
            child: PlanId(
                1,
            ),
            duration: 5s,
        },
        Join {
            children: [
                PlanId(
                    0,
                ),
                PlanId(
                    2,
                ),
            ],
        },
    ],
    root: Some(
        PlanId(
            3,
        ),
    ),
}
