src/plan/snapshots/asupersync__plan__tests__plan_dag_nested_race_of_joins.snap
---
source: src/plan/mod.rs
assertion_line: 1522
expression: dag
---
PlanDag {
    nodes: [
        Leaf {
            label: "s",
        },
        Leaf {
            label: "a",
        },
        Leaf {
            label: "b",
        },
        Join {
            children: [
                PlanId(
                    0,
                ),
                PlanId(
                    1,
                ),
            ],
        },
        Join {
            children: [
                PlanId(
                    0,
                ),
                PlanId(
                    2,
                ),
            ],
        },
        Race {
            children: [
                PlanId(
                    3,
                ),
                PlanId(
                    4,
                ),
            ],
        },
    ],
    root: Some(
        PlanId(
            5,
        ),
    ),
}
