src/plan/snapshots/asupersync__plan__tests__plan_dag_single_leaf.snap
---
source: src/plan/mod.rs
assertion_line: 1476
expression: dag
---
PlanDag {
    nodes: [
        Leaf {
            label: "work",
        },
    ],
    root: Some(
        PlanId(
            0,
        ),
    ),
}
