src/plan/snapshots/asupersync__plan__tests__plan_dag_timeout_wraps_leaf.snap
---
source: src/plan/mod.rs
expression: dag
---
PlanDag {
    nodes: [
        Leaf {
            label: "slow-op",
        },
        Timeout {
            child: PlanId(
                0,
            ),
            duration: 250ms,
        },
    ],
    root: Some(
        PlanId(
            1,
        ),
    ),
}
